@startuml d13_recency_sql
!include _style.puml
title d13_recency_sql — D12 + recency SQL rewrites
entity charity {
  * charity_id : BIGINT <<PK>>
}
entity person {
  * person_id : BIGINT <<PK>>
  * charity_id : BIGINT <<FK>>
}
entity donation {
  * donation_id : BIGINT <<PK>>
  * person_id : BIGINT <<FK>>
  * charity_id : BIGINT <<FK, copied>>
  * amount_cents : BIGINT
  * donated_at : TIMESTAMPTZ
}
charity ||--o{ person
person ||--o{ donation
charity ||..o{ donation
note bottom of donation
  D12 + recency SQL rewrites
  See ENHANCEMENTS.md for the controlled pair.
  Plans, not index names, establish heap fetches.
end note
@enduml
